working on project 2

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
+    <link rel = "stylesheet" type = "text/css" href = "https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel = "stylesheet" href = "styles/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1 class = "header-title">Elden Ring To-Do List</h1>
+    </header>
+
+    <section>
+        <input type = "text" id = "input-task">
+        <button type = "button" id = "add-task">Add to List</button>
+    </section>
+
+    <section id = "todo-list-container">
+        <ol id = "active-list"></ol>
+        <ul id = "completed-list"></ul>
+    </section>
+
+    <footer>
+
+    </footer>
+
+    <script src = "js/script.js"></script>
 </body>
 </html>
