added random quote generator

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
         <a href = "mailto:ndalzell1219@gmail.com">Email me for permission to check out the NPC questline guide!</a>
     </section>
 
+    <h2>Elden Ring Quote Generator</h2> 
+    <div id = "randomQuote"></div>
+    <button onclick = "newQuote()">Click here for an epic quote</button>
+
     <div class = "counter">
         <div class = "row">
             <div class = "column">
                 <h1>Death Counter!</h1>
+                <p>Don't worry, the more the better!</p>
                 <h1 id = "counter">0</h1>
                 <div class = "button-container">
                     <button class = "counterButton">Add death</button>
