--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
     <header>
         <h1 class = "header-title">Elden Ring Resource & Utility Website</h1>
-        <img src = "images/battle.jpg" alt = "Battle between Malenia and Radahn">
     </header>
+    
+    <div id = "arrow-left" class="arrow"></div>
+    <div class = "slide slide1"></div>
+    <div class = "slide slide2"></div>
+    <div class = "slide slide3"></div>
+    <div class = "slide slide4"></div>
+    <div id = "arrow-right" class = "arrow"></div>
 
     <section id = "links">
         <h2>Some helpful links:</h2>
@@ -26,7 +32,7 @@
 
     <section id = "quote-generator">
         <h2>Elden Ring Quote Generator</h2> 
-        <button onclick = "newQuote()">Click here for an epic quote</button>
+        <button id = "randomButton" onclick = "newQuote()">Click here for an epic quote</button>
         <div id = "randomQuote"></div>
     </section>
     
@@ -48,7 +54,7 @@
 
     <section id = "todo-list-container">
         <h3>Active List</h3>
-        <ol id = "active-list"></ol>        
+        <ul id = "active-list"></ul>        
     </section>
 
     <section id = "finished-list">
